[package]
name = "regen-base-sdk"
version = "0.1.0"
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
im = "14.0.0"
derive-error = "0.0.4"
