[package]
name = "regen-server-sdk"
version = "0.1.0"
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abci = "0.6.4"
blake2 = "0.8.1"
bech32 = "0.7.1"
protobuf = "2.8.1"
grpc = "0.6.1"
im = "14.0.0"
clap = "2.33.0"
#error-chain = "0.12.1"
#simple-error = "0.2.1"
regen-client-sdk = { path = "../regen-client-sdk" }

[build-dependencies]
protoc-rust-grpc = "0.6.1"
protoc-rust = "2.8.1"
