[package]
name = "regen_store_merk"
version = "0.1.0"
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regen_store = { path = "../regen_store" }
merk = "1.0.0-alpha.6"