[package]
name = "regen_table"
version = "0.1.0"
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.2.1"
regen_context = { path = "../regen_context" }
regen_store = { path = "../regen_store" }
